--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
 </head>
 <body>
   <section class="grid">
-    <h2 class="grid-title">Hello</h2>
-    <p class="grid-paragraph-location">where i work</p>
-    <p class="grid-paragraph-contact">my contact</p>
-    <p class=""></p>
-
-
-
-
+    <h1 class="grid-title">Hello</h1>
+    <h2 class="grid-who">WHO AM I?</h2>
+    <h2 class="grid-contact">WANNA MEET?</h2>
+    <p class="grid-who">I'm Beatrice Bentivoglio Magner. I'm a UX/UI, web and digital designer</p>
+    <p class="grid-contact">Drop me a line: beatricebentivogliom@gmail.com or +393465170365</p>
   </section>
   
 
